--- a/Alan_Turing_VASCO.ipynb
+++ b/Alan_Turing_VASCO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPnuTRMRktu+jNSY8dPIcDo",
+      "authorship_tag": "ABX9TyNLFL1JRAgH8iPixz/Z1T/g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,24 +34,31 @@
         "num2= int (input('digite o segundo numero: '))\n",
         "resultado=num1 + num2\n",
         "print(resultado)\n",
-        "\n"
+        "\n",
+        "num1= int (input('digite o primeiro numero: '))\n",
+        "num2= int (input('digite o segundo numero: '))\n",
+        "resultado=num1 + num2\n",
+        "print(resultado)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZMz4rQoraLcl",
-        "outputId": "80383d9c-eb1d-4c92-9b1f-12026c795910"
+        "outputId": "e5147537-814b-41fc-a2e8-ddba6d1f6ab1"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "digite o primeiro numero: 24\n",
-            "digite o segundo numero: 11\n",
-            "35\n"
+            "digite o primeiro numero: 19\n",
+            "digite o segundo numero: 19\n",
+            "38\n",
+            "digite o primeiro numero: 19\n",
+            "digite o segundo numero: 35\n",
+            "54\n"
           ]
         }
       ]
