--- a/Alan_Turing_VASCO.ipynb
+++ b/Alan_Turing_VASCO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNLFL1JRAgH8iPixz/Z1T/g",
+      "authorship_tag": "ABX9TyMf8eyRBby4n/+3/nyevKWq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,23 +31,19 @@
       "source": [
         "\n",
         "num1= int (input('digite o primeiro numero: '))\n",
-        "num2= int (input('digite o segundo numero: '))\n",
-        "resultado=num1 + num2\n",
-        "print(resultado)\n",
         "\n",
-        "num1= int (input('digite o primeiro numero: '))\n",
         "num2= int (input('digite o segundo numero: '))\n",
         "resultado=num1 + num2\n",
-        "print(resultado)"
+        "print(resultado)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZMz4rQoraLcl",
-        "outputId": "e5147537-814b-41fc-a2e8-ddba6d1f6ab1"
+        "outputId": "a4275abe-ab72-41b2-bed7-70404334d458"
       },
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,10 +51,40 @@
           "text": [
             "digite o primeiro numero: 19\n",
             "digite o segundo numero: 19\n",
-            "38\n",
-            "digite o primeiro numero: 19\n",
-            "digite o segundo numero: 35\n",
-            "54\n"
+            "38\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1= int (input('digite o peso numero: '))\n",
+        "print(f'Seu peso é {num1}Kg')\n",
+        "num2= float (input('digite a altura numero: '))\n",
+        "print(f'Sua altura é {num2}m')\n",
+        "\n",
+        "resultado=num1 / (num2**2)\n",
+        "print(f'{resultado}%')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kQGNLhNy-5MQ",
+        "outputId": "e0d5d758-b44f-4c45-e848-e23cbbc69c64"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o peso numero: 90\n",
+            "Seu peso é 90Kg\n",
+            "digite a altura numero: 1.70\n",
+            "Sua altura é 1.7m\n",
+            "31.14186851211073 %\n"
           ]
         }
       ]
