--- a/Alan_Turing_VASCO.ipynb
+++ b/Alan_Turing_VASCO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMf8eyRBby4n/+3/nyevKWq",
+      "authorship_tag": "ABX9TyMgab3N9v0hgIyugkh1XKJs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
         "id": "ZMz4rQoraLcl",
         "outputId": "a4275abe-ab72-41b2-bed7-70404334d458"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,6 +59,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Programa para calcular o IMC\n",
         "num1= int (input('digite o peso numero: '))\n",
         "print(f'Seu peso é {num1}Kg')\n",
         "num2= float (input('digite a altura numero: '))\n",
@@ -74,7 +75,7 @@
         "id": "kQGNLhNy-5MQ",
         "outputId": "e0d5d758-b44f-4c45-e848-e23cbbc69c64"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,12 +92,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#Criar um programa que retorne o nome, a cidade e a idade de um usuário através da sua data de nascimento:\n",
+        "\n",
+        "from datetime import datetime\n",
+        "\n",
+        "nome = input('digite o seu nome: ')\n",
+        "cidade = input('digite o nome da sua cidade: ')\n",
+        "data_nasc = input('digite quando você nasceu (DD/MM/YYYY):')\n",
+        "\n",
+        "\n",
+        "idade = datetime.now() - datetime.strptime(data_nasc, '%d/%m/%Y')\n",
+        "\n",
+        "idade = idade.days // 365\n",
+        "\n",
+        "print(f'Seu nome é {nome}, sua cidade é {cidade}, sua idade é {idade} anos.')\n"
+      ],
       "metadata": {
-        "id": "QIBlxutUaA4k"
+        "id": "QIBlxutUaA4k",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4a425f4b-4253-4029-84a9-a61ced90c8ec"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o seu nome: Marlon \n",
+            "digite o nome da sua cidade: Nova Venécia - ES \n",
+            "digite quando você nasceu (DD/MM/YYYY):10/06/2005\n",
+            "Seu nome é Marlon , sua cidade é Nova Venécia - ES , sua idade é 19 anos.\n"
+          ]
+        }
+      ]
     }
   ]
 }
