--- a/Alan_Turing_VASCO.ipynb
+++ b/Alan_Turing_VASCO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMgab3N9v0hgIyugkh1XKJs",
+      "authorship_tag": "ABX9TyMo/58DZqLEJ/7e5E9yx1Ow",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,7 +115,7 @@
         },
         "outputId": "4a425f4b-4253-4029-84a9-a61ced90c8ec"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,6 +125,150 @@
             "digite o nome da sua cidade: Nova Venécia - ES \n",
             "digite quando você nasceu (DD/MM/YYYY):10/06/2005\n",
             "Seu nome é Marlon , sua cidade é Nova Venécia - ES , sua idade é 19 anos.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime, date,  time, timedelta\n",
+        "import pytz\n",
+        "\n",
+        "#data_hora_atual = datetime.now()\n",
+        "#print('data e hora atual: ', data_hora_atual)\n",
+        "\n",
+        "fuso_horario = pytz.timezone('America/Sao_Paulo')\n",
+        "data_hora_sao_paulo = datetime.now(fuso_horario)\n",
+        "print(data_hora_sao_paulo.strftime('%d/%m/%Y e são %H:%M:%S'))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kn8L7oSGxoMw",
+        "outputId": "36a812a7-5a41-4df3-e84c-3a1c3219ae81"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "07/03/2025 e são 15:20:19\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime, date,  time, timedelta\n",
+        "import pytz\n",
+        "\n",
+        "#1 Solicite a data e hora atual do sistema e exiba-a formatado no seguinte formato: \"dia de mês de ano, HH:MM:SS\"\n",
+        "fuso_horario = pytz.timezone('America/Sao_Paulo')\n",
+        "data_hora_sao_paulo = datetime.now(fuso_horario)\n",
+        "print(data_hora_sao_paulo.strftime('%d/%m/%Y e são %H:%M:%S'))\n",
+        "\n",
+        "#2 Pedir ao usuário sua data de nascimento (no formato dd/mm/aaaa) e calcular sua idade atual.\n",
+        "data_nasc = input('digite quando você nasceu (DD/MM/YYYY):')\n",
+        "\n",
+        "idade = datetime.now() - datetime.strptime(data_nasc, '%d/%m/%Y')\n",
+        "\n",
+        "idade = idade.days // 365\n",
+        "print(f'Sua idade é {idade} anos.')\n",
+        "\n",
+        "#3 Peça ao usuário a data de um evento futuro e calcule quantos dias faltam para ele:\n",
+        "\n",
+        "data_event = input('digite quando será o evento (DD/MM/YYYY):')\n",
+        "data_event_De = datetime.strptime(data_event, '%d/%m/%Y') . date()\n",
+        "calc = (data_event_De - date.today()).days\n",
+        "\n",
+        "\n",
+        "print(f'Faltam {calc} dias para o evento.')\n",
+        "\n",
+        "#5 Exiba a date e hora atuais em três fusos horários diferentes: São Paulo, Nova York e Tókio\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 315
+        },
+        "id": "pRQIyS6q9AMM",
+        "outputId": "b2b159ea-57c0-490f-c8d2-353200253ccf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "07/03/2025 e são 16:41:55\n",
+            "digite quando você nasceu (DD/MM/YYYY):10/10/1000\n",
+            "Sua idade é 1025 anos.\n",
+            "digite quando será o evento (DD/MM/YYYY):10/10/1000\n",
+            "Faltam -374157 dias para o evento.\n",
+            "digite uma data (DD/MM/YYYY):07/03/2025\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'int' object has no attribute 'weekday'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-98f861efc082>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mdata_usuario\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'digite uma data (DD/MM/YYYY):'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0mdata_usuario\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_usuario\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%d/%m/%Y'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0mweekday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'o dia da semana é: {dias[data_usuario.weekday()]}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'weekday'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#4 Peça ao usuário uma dta e informe o seu dia da semana correspondente:\n",
+        "\n",
+        "from datetime import datetime, date,  time, timedelta\n",
+        "import pytz\n",
+        "dias = ['segunda-feira', 'terça-feira', 'quarta-feira', 'quinta-feira', 'sexta-feira', 'sábado', 'domingo']\n",
+        "data_usuario = input('digite uma data (DD/MM/YYYY):')\n",
+        "data_usuario_D = datetime.strptime(data_usuario, '%d/%m/%Y') . weekday()\n",
+        "print(f'o dia da semana é: {dias[data_usuario_D]}')\n",
+        "\n",
+        "#5 Exiba a date e hora atuais em três fusos horários diferentes: São Paulo, Nova York e Tókio\n",
+        "\n",
+        "fuso_horario = pytz.timezone('America/Sao_Paulo')\n",
+        "data_hora_sao_paulo = datetime.now(fuso_horario)\n",
+        "print(data_hora_sao_paulo.strftime('%d/%m/%Y e são %H:%M:%S em São Pulo'))\n",
+        "\n",
+        "fuso_horario = pytz.timezone('America/New_York')\n",
+        "data_hora_nova_York = datetime.now(fuso_horario)\n",
+        "print(data_hora_nova_York.strftime('%d/%m/%Y e são %H:%M:%S em Nova York'))\n",
+        "\n",
+        "fuso_horario = pytz.timezone('Asia/Tokyo')\n",
+        "data_hora_tokyo = datetime.now(fuso_horario)\n",
+        "print(data_hora_tokyo.strftime('%d/%m/%Y e são %H:%M:%S em Tokyo'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vDJUGnMk6vsd",
+        "outputId": "6726625c-ede7-46ed-b684-03668a23c277"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite uma data (DD/MM/YYYY):09/03/2025\n",
+            "o dia da semana é: domingo\n",
+            "09/03/2025 e são 14:35:00 em São Pulo\n",
+            "09/03/2025 e são 13:35:00 em Nova York\n",
+            "10/03/2025 e são 02:35:00 em Tokyo\n"
           ]
         }
       ]
