--- a/Alan_Turing_VASCO.ipynb
+++ b/Alan_Turing_VASCO.ipynb
@@ -192,35 +192,22 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 315
+          "base_uri": "https://localhost:8080/"
         },
         "id": "pRQIyS6q9AMM",
-        "outputId": "b2b159ea-57c0-490f-c8d2-353200253ccf"
+        "outputId": "0653bd61-82aa-4329-8003-ef02ac215212"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "07/03/2025 e são 16:41:55\n",
-            "digite quando você nasceu (DD/MM/YYYY):10/10/1000\n",
-            "Sua idade é 1025 anos.\n",
-            "digite quando será o evento (DD/MM/YYYY):10/10/1000\n",
-            "Faltam -374157 dias para o evento.\n",
-            "digite uma data (DD/MM/YYYY):07/03/2025\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'int' object has no attribute 'weekday'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-17-98f861efc082>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mdata_usuario\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'digite uma data (DD/MM/YYYY):'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0mdata_usuario\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrptime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_usuario\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'%d/%m/%Y'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m.\u001b[0m \u001b[0mweekday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'o dia da semana é: {dias[data_usuario.weekday()]}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'weekday'"
+            "09/03/2025 e são 14:36:47\n",
+            "digite quando você nasceu (DD/MM/YYYY):10/06/2005\n",
+            "Sua idade é 19 anos.\n",
+            "digite quando será o evento (DD/MM/YYYY):10/12/2030\n",
+            "Faltam 2102 dias para o evento.\n"
           ]
         }
       ]
