--- a/Alan_Turing_VASCO.ipynb
+++ b/Alan_Turing_VASCO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMo/58DZqLEJ/7e5E9yx1Ow",
+      "authorship_tag": "ABX9TyOr80SQgofpro00j56+724w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,7 +197,7 @@
         "id": "pRQIyS6q9AMM",
         "outputId": "0653bd61-82aa-4329-8003-ef02ac215212"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -245,7 +245,7 @@
         "id": "vDJUGnMk6vsd",
         "outputId": "6726625c-ede7-46ed-b684-03668a23c277"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,6 +259,257 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1= int(input('digite o primeiro numero: '))\n",
+        "num2= int(input('digite o segundo numero: '))\n",
+        "resultado = num1 + num2\n",
+        "print(resultado)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VwYxUKdUXNoD",
+        "outputId": "a02d2583-d6dc-4ef1-b4ed-f28a35804600"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o primeiro numero: 12\n",
+            "digite o segundo numero: 2\n",
+            "14\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "primeiro= input('digite o seu priumeiro nome: ')\n",
+        "ultimo= input('digite o ultimo nome: ')\n",
+        "\n",
+        "print(f'seu nome completo é {primeiro} {ultimo}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uwIeMMkgZuxe",
+        "outputId": "dfa4d6e5-90e0-47b5-f0d3-14ad34e3d1ef"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o seu priumeiro nome: marlon \n",
+            "digite o ultimo nome: jesus\n",
+            "seu nome completo é marlon  jesus\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome= input('insira uma nome: ')\n",
+        "num= int(input('insira um numero:'))\n",
+        "resultado= nome*num\n",
+        "\n",
+        "print(f'seu nome é: {resultado}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kz09fZ3Sarjc",
+        "outputId": "52f4742c-002e-427a-e687-6d52378e3392"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "insira uma nome: marlon\n",
+            "insira um numero:4\n",
+            "seu nome é: marlonmarlonmarlonmarlon\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "text= input('insira um texto: ')\n",
+        "print(text.upper())\n",
+        "print(f'possuí {len(text)} caracteres o texto, incluindo os espaços {text}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9rY3aGqcco-0",
+        "outputId": "6862a65f-dce6-4e48-c5ed-09f8d5fecb00"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "insira um texto: vasco da gama\n",
+            "VASCO DA GAMA\n",
+            "possuí 13 caracteres palavra vasco da gama\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime\n",
+        "import pytz\n",
+        "\n",
+        "data_hora= pytz.timezone('america/sao_paulo')\n",
+        "data_e_hora= datetime.now(data_hora)\n",
+        "\n",
+        "print(data_e_hora)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a2miOfvQfASM",
+        "outputId": "396fe771-6ded-4da0-faaf-ab8c5b5a7ca1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2025-03-13 14:17:07.681498-03:00\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1= float(input('insira o primeiro valor: '))\n",
+        "num2= float(input('insira o segundo valor: '))\n",
+        "num3= float(input('insira o terceiro valor: '))\n",
+        "\n",
+        "calc= (num1+num2+num3)/ 3\n",
+        "\n",
+        "print(calc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ACa7Q5ONgyNm",
+        "outputId": "34b333c3-2c9b-4e90-896a-a929bf26a9ca"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "insira o primeiro valor: 2\n",
+            "insira o segundo valor: 2\n",
+            "insira o terceiro valor: 2\n",
+            "2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "num= float(input('insira o valor do raio de um círculo: '))\n",
+        "\n",
+        "area= (math.pi) * (pow(num , 2))\n",
+        "\n",
+        "\n",
+        "print(f'o valor da área é: {area}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mAj59Eq61GXl",
+        "outputId": "a4bfa936-4f60-4387-8aa9-8a0644b3a125"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "insira o valor do raio de um círculo: 2\n",
+            "o valor da área é: 12.566370614359172\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Peça um número e exiba o fatorial dele.\n",
+        "import math\n",
+        "numero= int(input('digite o numero:'))\n",
+        "\n",
+        "# Para garantir que não haja o número 0 na multiplicação\n",
+        "fatorial = 1\n",
+        "\n",
+        "#Função de repetoção (Laço flor)\n",
+        "for i in range(1, numero + 1):\n",
+        "\n",
+        "  fatorial *= i\n",
+        "\n",
+        "print(f'fatoria de {numero} é {fatorial}.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1mOAS5uW4xN1",
+        "outputId": "d8f35a97-ce0d-4cdd-bc21-3aa863d0aa51"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o numero:4\n",
+            "fatoria de 4 é 24.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from datetime import datetime\n"
+      ],
+      "metadata": {
+        "id": "ermemiVdIiHZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
