--- a/Alan_Turing_VASCO.ipynb
+++ b/Alan_Turing_VASCO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOr80SQgofpro00j56+724w",
+      "authorship_tag": "ABX9TyM6B3XbBLYkatpVFW64D9kD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -452,7 +452,7 @@
         "id": "mAj59Eq61GXl",
         "outputId": "a4bfa936-4f60-4387-8aa9-8a0644b3a125"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +488,7 @@
         "id": "1mOAS5uW4xN1",
         "outputId": "d8f35a97-ce0d-4cdd-bc21-3aa863d0aa51"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,6 +507,245 @@
       ],
       "metadata": {
         "id": "ermemiVdIiHZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça o número e informe se ele é maior que 10.\n",
+        "\n",
+        "numero = int(input(\"Digite um numero:\"))\n",
+        "\n",
+        "if numero > 10:\n",
+        "\n",
+        "  print(f'{numero} é maior que 10.')\n",
+        "\n",
+        "else:\n",
+        "  print(f'{numero} não maior que 10.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bw_sxHXIWfIx",
+        "outputId": "f318668c-004d-42a0-f25c-065c521d7149"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um numero:5\n",
+            "5 não maior que 10.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça um número inteiro e informe se ele é par.\n",
+        "\n",
+        "numero = int(input(\"Digite um numero:\"))\n",
+        "if numero%2 == 0:\n",
+        "\n",
+        "  print(f'{numero} é um valor par.')\n",
+        "\n",
+        "else:\n",
+        "  print(f'{numero} é um valor ímpar.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NmluhY7GZuQ3",
+        "outputId": "81cf593e-b244-45ca-b4c6-aa9876f0b31b"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um numero:5\n",
+            "5 é um valor ímpar.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça um nome e informe se ele contém a letra \"a\".\n",
+        "\n",
+        "palavra= input('digite uma palavra:')\n",
+        "if 'a' in palavra:\n",
+        "  print(f'a palavra {palavra} possui a letra A')\n",
+        "else:\n",
+        "  print(f'a palavra {palavra} não possui a letra A.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PFIQDdCSbn65",
+        "outputId": "02b8fc42-07c1-42cb-9c17-bb8a63a9ae66"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite uma palavra:Cleiton\n",
+            "a palavra Cleiton não possui a letra A.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça um número e informe se ele é múltiplo de 5.\n",
+        "\n",
+        "num= int(input('Digite um número: '))\n",
+        "if num %5==0:\n",
+        "  print(f'{num} é um valor multiplo de 5')\n",
+        "\n",
+        "else:\n",
+        "  print(f'{num} não é um valor multiplo de 5')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8S5xq8IGdxAb",
+        "outputId": "8801459e-dbcb-45a8-934a-4d1051df52d5"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: 45\n",
+            "45 é um valor multiplo de 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça a temperatura atual e informe se está quente (acima de 30°C) ou frio (30°C ou menos).\n",
+        "\n",
+        "temp= int(input('Digite uma temperatura: '))\n",
+        "if  30 < temp:\n",
+        "  print(f'a temperatura está alta, está quente {temp}°C.')\n",
+        "else:\n",
+        "  print(f'a temperatura está baixa, está frio {temp}°C.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0KeKydW3erP0",
+        "outputId": "c182c4c7-d79e-4983-c190-270b55a8e43d"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite uma temperatura: 13\n",
+            "a temperatura está baixa, está frio 13°C.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 8 - Peça ao usuário para digitar \"S\" para continuar ou \"N\" para sair e informe a ação correspondente.\n",
+        "\n",
+        "let= input('Digite uma letra:')\n",
+        "let= let.lower()\n",
+        "\n",
+        "if 's' in let:\n",
+        "  print('continuar')\n",
+        "\n",
+        "elif 'n' in let:\n",
+        "  print('Sair')\n",
+        "\n",
+        "else:\n",
+        "  print('Ação inválida')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9rH2A19IhOF5",
+        "outputId": "dffca3cd-8023-4de4-e3cb-025923a08c0a"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite uma letra:n\n",
+            "Sair\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça um número e informe se ele é negativo, zero ou positivo.\n",
+        "\n",
+        "num= int(input('Digite m valor: '))\n",
+        "\n",
+        "if num > 0:\n",
+        "  print(f'{num} é um valor positivo.')\n",
+        "\n",
+        "elif num == 0:\n",
+        "  print(f'{num} é zero')\n",
+        "\n",
+        "else:\n",
+        "  print(f'{num} é um valor negativo.')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Laebl5I3ixws",
+        "outputId": "c0837e6d-ca89-455f-bec1-d7cd1c6e3af5"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite m valor: 0\n",
+            "0 é zero\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça um número de 1 a 7 e informe o dia da semana correspondente.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "hVLJmPSRkH_V"
       },
       "execution_count": null,
       "outputs": []
