--- a/Alan_Turing_VASCO.ipynb
+++ b/Alan_Turing_VASCO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6B3XbBLYkatpVFW64D9kD",
+      "authorship_tag": "ABX9TyPzj8RH8BV99tItSgTvMXvp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -532,7 +532,7 @@
         "id": "Bw_sxHXIWfIx",
         "outputId": "f318668c-004d-42a0-f25c-065c521d7149"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -564,7 +564,7 @@
         "id": "NmluhY7GZuQ3",
         "outputId": "81cf593e-b244-45ca-b4c6-aa9876f0b31b"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +594,7 @@
         "id": "PFIQDdCSbn65",
         "outputId": "02b8fc42-07c1-42cb-9c17-bb8a63a9ae66"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -625,7 +625,7 @@
         "id": "8S5xq8IGdxAb",
         "outputId": "8801459e-dbcb-45a8-934a-4d1051df52d5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +655,7 @@
         "id": "0KeKydW3erP0",
         "outputId": "c182c4c7-d79e-4983-c190-270b55a8e43d"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +691,7 @@
         "id": "9rH2A19IhOF5",
         "outputId": "dffca3cd-8023-4de4-e3cb-025923a08c0a"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,7 +708,7 @@
       "source": [
         "#Peça um número e informe se ele é negativo, zero ou positivo.\n",
         "\n",
-        "num= int(input('Digite m valor: '))\n",
+        "num= int(input('Digite um valor: '))\n",
         "\n",
         "if num > 0:\n",
         "  print(f'{num} é um valor positivo.')\n",
@@ -726,7 +726,7 @@
         "id": "Laebl5I3ixws",
         "outputId": "c0837e6d-ca89-455f-bec1-d7cd1c6e3af5"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -742,13 +742,107 @@
       "cell_type": "code",
       "source": [
         "#Peça um número de 1 a 7 e informe o dia da semana correspondente.\n",
+        "\n",
+        "num= int(input('Escreva um numero de 1 a 7: '))\n",
+        "dia_semana= ('1 - segunda-feira', '2 - terça-feira', '3 - quarta-feira', '4 - quinta-feira', '5 - sextafeira', '6 - sabádo', '7 - domingo')\n",
+        "\n",
+        "calc = dia_semana[num-1]\n",
+        "print(f'O dia da semna é: {calc}')\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
-        "id": "hVLJmPSRkH_V"
+        "id": "hVLJmPSRkH_V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71437f80-87c9-4c1a-8ce1-3314a5506e78"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Escreva um numero de 1 a 7: 4\n",
+            "O dia da semna é: 4-quinta-feira\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça um ano e informe se ele é bissexto. Crie um algoritmo em Python que verifique se o ano é divisível por 4 e não por 100, exceto se também for divisível por 400.\n",
+        "\n",
+        "num= int(input('Digite um ano:'))\n",
+        "\n",
+        "if (num%4==0 and num%100!=0) or num%400==0:\n",
+        "  print(f'o ano {num} é bissexto')\n",
+        "\n",
+        "else:\n",
+        "  print(f'o ano {num} não é bissexto')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ndXdsOZE9NAI",
+        "outputId": "21841f76-9fef-4024-ec4f-65eb892819d0"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um ano:2000\n",
+            "o ano 2000 é bissexto\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Peça a quantidade de horas trabalhadas e o valor por hora.\n",
+        "#Se trabalhou até 40 horas, calcule o salário normalmente (horas × valor por hora).\n",
+        "#Se trabalhou mais de 40 horas, as horas extras devem ter um adicional de 50% (horas extras × valor por hora × 1.5).\n",
+        "\n",
+        "num_t= int(input('Digite a quantida de horas: '))\n",
+        "num_p= int(input('Digite o valor por hora: '))\n",
+        "\n",
+        "if num_t <= 40:\n",
+        "  calc= (num_t*num_p)*4\n",
+        "  print(f'O valor pelo tempo trabalhado foi de {calc:.2f} reais')\n",
+        "\n",
+        "if num_t > 40:\n",
+        "  hora_x = (num_t-40)\n",
+        "  calc_1= ((num_t*num_p)+(hora_x*num_p*1.5))*4\n",
+        "  print(f'O valor pelo tempo trabalhado foi de {calc_1:.2f} reais')\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gOAkfG53AnyR",
+        "outputId": "01a04367-aa5a-46ea-db5f-e073256ce790"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a quantida de horas: 41\n",
+            "Digite o valor por hora: 10\n",
+            "O valor pelo tempo trabalhado foi de 1700.00 reais\n"
+          ]
+        }
+      ]
     }
   ]
 }
